--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -3,6 +3,7 @@
   text-decoration: underline;
   font-weight: 700;
   text-shadow: 2px 2px #83B4DC;
+  text-align: center;
 }
 .education{
   font-family: 'Oxygen', sans-serif;
@@ -13,6 +14,7 @@
   width: 35%;
   margin: 0 10% 0 10%;
  border-bottom: 2px solid #325C74;
+ text-align: center;
 }
 
 .header-5{
