--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -11,7 +11,7 @@
   text-decoration: underline;
   font-weight: 700;
   text-shadow: 2px 2px #83B4DC;
-  margin-right: 65px;
+  text-align: center;
 }
 
 hr {
